--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -117,3 +117,9 @@ ion-menu ion-content {
   ion-item.selected {
     --color: var(--ion-color-primary);
   }
+
+  .alinharBotao {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
