--- a/src/app/pages/note-details/note-details.page.html
+++ b/src/app/pages/note-details/note-details.page.html
@@ -11,7 +11,7 @@
 <ion-content padding>
   <ion-item>
     <ion-label position="stacked">Título</ion-label>
-    <ion-input [(ngModel)]="note.title"></ion-input>
+    <ion-input maxlength="15" [(ngModel)]="note.title"></ion-input>
   </ion-item>
   
   <ion-item>
