--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -14,11 +14,11 @@
           <div padding>
             <ion-item>
               <ion-label position="floating">E-mail</ion-label>
-              <ion-input type="email" [(ngModel)]="userLogin.email" required></ion-input>
+              <ion-input type="email" [(ngModel)]="userLogin.email"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Senha</ion-label>
-              <ion-input type="password" [(ngModel)]="userLogin.password" required></ion-input>
+              <ion-input type="password" [(ngModel)]="userLogin.password"></ion-input>
             </ion-item>
           </div>
           <div padding>
